syntax = "proto3";
package sdb;

/* to generate service */
option cc_generic_services = true;

option go_package="./sdb";
import  "worker_service.proto";

// The greeting service definition.
// Sends a greeting
service Schedule {
  rpc Depart(ExecQueryRequest) returns (ExecQueryReply) {}
  rpc WorkerReportResult(WorkerResultReportRequest) returns (WorkerResultReportReply) {}
}

// The request message containing the user's name.
message ExecQueryRequest {
  string name = 1;
  string sql = 2;
  uint64 sid = 3;
  uint64 uid = 4;
  uint64 dbid = 5;
  uint64 xid = 6;
  uint64 commandid = 7;
}

// The response message containing the greetings
message ExecQueryReply {
  string message = 1;
}

message WorkerResultReportRequest {
  TaskIdentify task_id  = 1;
  uint64 dbid = 2;
  int32 rescode = 3;
  string message = 4;
  string meta_file = 5;
  repeated string data_files = 6;
}

message WorkerResultReportReply {
  int32 rescode = 1;
}
